<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_blank_fragment">Todo actions: </string>
    <string name="refresh_successful">Data succsessfully refreshed</string>
    <string name="service_error">An error ocurred</string>
    <string name="field_empty">This field can\'t be empty</string>

    <!--  To do  -->
    <string name="todo_fragment_empty_message">You do not have any TODOs yet. Press the + button to create your first one.</string>

    <!-- Add -->
    <string name="title_activity_add">Add Todo</string>
    <string name="add_fragment_add">Add</string>
    <string name="add_fragment_description_hint">Description</string>
    <string name="add_fragment_category">Category</string>
    <string name="add_fragment_priority">Priority</string>
    <string name="add_fragment_priority_high">High Priority</string>
    <string name="add_fragment_priority_medium">Medium Priority</string>
    <string name="add_fragment_priority_low">Low Priority</string>
    <string name="add_fragment_category_work">Work</string>
    <string name="add_fragment_category_study">Study</string>
    <string name="add_fragment_category_shopping">Shopping</string>
    <string name="add_fragment_category_leisure">Leisure</string>
    <string name="add_fragment_select_priority">Select a Priority</string>
    <string name="add_fragment_due_date_hint">Due date</string>
    <string name="add_fragment_due_date_later">The date needs to be later than today</string>

    <!-- Auth  -->
    <string name="auth_activity_email">Email</string>
    <string name="auth_activity_password">Password</string>
    <string name="auth_activity_log_in">Log in</string>
    <string name="auth_activity_sign_up">Sign up</string>
    <string name="auth_activity_sign_up_underline"><u>Sign up</u></string>
    <string name="auth_activity_sign_up_question">Don\'t have an account?</string>
    <string name="auth_activity_log_out">Log out</string>
    <string name="auth_activity_login_error">The credentials are not valid</string>
    <string name="auth_activity_name">Name</string>
    <string name="auth_activity_confirm_password">Confirm Password</string>
    <string name="auth_activity_passwords_dont_match">Passwords don\'t match</string>
    <string name="auth_activity_signup_error">The user couldn\'t be created</string>
    <string name="auth_activity_wrong_format">Wrong format</string>
    <string name="auth_activity_signup_success">User created</string>

    <!-- Profile  -->
    <string name="profile_fragment_joined">Joined on</string>
    <string name="profile_fragment_categories_used">Categories used</string>
    <string name="profile_fragment_total_tasks">Total tasks</string>
    <string name="profile_fragment_tasks_completed">Tasks completed</string>
    <string name="profile_fragment_categories_most_used">Most used category</string>


</resources>
